--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <div class="left-col-block blocks">
     <header class="header">
         <div class="content text-center">
-            <h1>Hi, I'm Amelie Ebert!</h1>
+            <h1>Hi, I'm Jorleidis Monsalvo!</h1>
 
-            <p class="lead">Marketing Consultant</p>
+            <p class="lead">Undergraduate student</p>
             <ul class="social-icon">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -69,20 +69,8 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <p>
-                    Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
-                    integrate efficient portals rather than customized customer service. Assertively deliver
-                    frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
-                    process-centric expertise. Energistically fabricate customized imperatives through cooperative
-                    catalysts for change.
-
-                </p>
-
-                <p>
-                    Dramatically predominate mission-critical materials and cooperative systems. Holisticly synergize
-                    optimal results through team building "outside the box" thinking. Seamlessly facilitate frictionless
-                    relationships via robust imperatives. Monotonectally brand wireless products and excellent action
-                    items. Monotonectally disintermediate granular alignments via sustainable infomediaries.
+                <p id="about">
+                    I am Jorleidis Paola Monsalvo Torres. I am nineteen years old. I am student in seven semester of Computer and System Engineering in the University of the Andes. I find interesting data mining, machine learning, Internet of Things, among others. 
                 </p>
             </div>
         </div>
@@ -95,7 +83,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Expertise</h2>
+                    <h2>Projects</h2>
                 </div>
             </div>
         </div>
@@ -104,45 +92,17 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Professionally drive</h3>
-
-                    <p>
-                        Synergistically strategize customer directed resources rather than principle.
-                    </p>
+                    <img src=img/AtmenUhr.png>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Seamlessly leverage </h3>
-
+                    <h3>AtmenUhr Project </h3>
                     <p>
-                        Quickly repurpose reliable customer service with orthogonal ideas. Competently.
-                    </p>
+                        Atmetuhr will be a smart nicotine spray that will aim to help people that smoke to stop doing. This spray will be connected to an application both computer and mobile wirelessly. This Spray will collect usage data and recommend the correct dose for each user according to a parametrization of initial data. The progress of each user will be shown in the application. Additionally, it will have a medical follow-up section led by a health professional who can answer questions and optimize the use of the device.
                 </div>
             </div>
         </div>
-        <!-- .row -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Interactively incubate</h3>
-
-                    <p>
-                        Interactively myocardinate high standards in initiatives rather than next-generation.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Globally streamline</h3>
-
-                    <p>
-                        Dynamically initiate client-based convergence vis-a-vis performance based. </p>
-                </div>
-            </div>
-        </div>
-        <!-- .row -->
     </div>
     <!--.container-fluid-->
 </section>
@@ -163,11 +123,11 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
-                        <span class="progress-title">Marketing</span>
+                        <span class="progress-title">Java</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 62%"><span class="progress-percent"> 62%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                                 aria-valuemax="95" style="width: 95%"><span class="progress-percent"> 95%</span>
                             </div>
                         </div>
                         <!-- .progress -->
@@ -176,11 +136,11 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Market Research</span>
+                        <span class="progress-title">C/C++</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 90%"><span class="progress-percent"> 90%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 55%"><span class="progress-percent"> 55%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
@@ -189,7 +149,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Organisational Skills</span>
+                        <span class="progress-title">Javascript</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
@@ -201,28 +161,16 @@
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                        <span class="progress-title">Communtcation Skills</span>
+                        <span class="progress-title">HTML</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
                     </div>
                     <!-- /.skill-progress -->
-                    <div class="progress-item">
-                        <span class="progress-title">Project Management</span>
-
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
-                            </div>
-                        </div>
-                        <!-- .progress -->
-                    </div>
-                    <!-- .skill-progress -->
-
                 </div>
                 <!-- /.progress-wrapper -->
             </div>
@@ -244,19 +192,19 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <small>2015 - Present</small>
-                    <h3>Head of market research</h3>
-                    <h4>Computer & Motor Ltd.</h4>
+                    <small>2018-2</small>
+                    <h3>Class Assistant</h3>
+                    <h4>Products desing and innovation in TI</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Bogotá, Colombia</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2012 - 2015</small>
-                    <h3>Media Analyst</h3>
-                    <h4>BizzNiss</h4>
+                    <small>2019-1</small>
+                    <h3>Class Assistant</h3>
+                    <h4>Products desing and innovation in TI</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Bogotá, Colombia</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
