--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
 <![endif]-->
     </head>
     <body id="page-top" data-spy="scroll" data-target=".navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#">Hidden brand</a>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#aboutme">About me <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#education">Education <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#experience">Work Experience<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#skills">Skills <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#hobbies">Hobbies</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
         <div id="main-wrapper">
             <!-- Page Preloader -->
             <div id="preloader">
@@ -46,14 +78,13 @@
 
                             <p class="lead">Undergraduate student</p>
                             <ul class="social-icon">
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/jorly.monsalvotorres"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com/JorlysM?lang=es"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+
+                                <li><a href="https://www.instagram.com/jorlys_m/?hl=es-la"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <div class="profile-img"></div>
+                        <div class="profile-img"><img src="img/yo-profile.jpg" alt="Me"></div>
                     </header>
                     <!-- .header-->
                 </div>
@@ -65,11 +96,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="section-title">
-                                        <h2>What I am all about.</h2>
+                                        <h2 id="aboutme">What I am all about.</h2>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <p id="about">
+                                    <p class="text">
                                         I am Jorleidis Paola Monsalvo Torres. I am nineteen years old. I am student in seven semester of Computer and System Engineering in the University of the Andes. I find interesting data mining, machine learning, Internet of Things, among others. 
                                     </p>
                                 </div>
@@ -83,7 +114,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="section-title">
-                                        <h2>Projects</h2>
+                                        <h2 id="projects">Projects</h2>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +123,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="expertise-item">
-                                        <img src=img/AtmenUhr.png>
+                                        <a href="https://grupoidee.wixsite.com/atmenuhr/la-idea" target="_blank"><img src="img/AtmenUhr.png" alt="logo"></a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -113,7 +144,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="section-title">
-                                        <h2>Skills</h2>
+                                        <h2 id="skills">Skills</h2>
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +216,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="section-title"><h2>Work Experience</h2></div>
+                                    <div class="section-title"><h2 id="experience">Work Experience</h2></div>
                                 </div>
                             </div>
                             <!--.row-->
@@ -219,7 +250,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="section-title"><h2>Education</h2></div>
+                                    <div class="section-title"><h2 id="education">Education</h2></div>
                                 </div>
                             </div>
                             <!--.row-->
@@ -229,18 +260,21 @@
                                         <small>2012 - 2015</small>
                                         <h3>High School</h3>
                                         <h4>I.E. Escuela Normal Superior Nuestra Señora de Fátima </h4>
-                                        <img src="img/Fatima.jpg">
                                         <p>Atlántico, Colombia</p>
+                                        <a title="High School" href="http://www.normaldefatima.edu.co/" target="_blank">
+                                            <img src="img/Fatima.jpg" alt="a picture of a High School">
+                                        </a>
+
                                     </div>
                                     <!-- .experience-item -->
                                     <div class="content-item">
-                                       
+
                                         <small>2016 - present</small>
-                                        <h3>System and Computing Engineering</h3>
+                                        <h3>Systems and Computing Engineering</h3>
                                         <h4>Universidad de los Andes</h4>
                                         <p>Bogotá, Colombia</p>
                                         <div class="videowrapper">
-                                        <iframe height="250px" src="https://www.youtube.com/embed/HnNKpl-Zhl4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe height="250px" src="https://www.youtube.com/embed/HnNKpl-Zhl4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
 
@@ -258,7 +292,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="section-title">
-                                        <h2>Interest</h2>
+                                        <h2 id="hobbies">Hobbies</h2>
                                     </div>
                                 </div>
                             </div>
@@ -269,24 +303,14 @@
                                     <div class="content-item">
                                         <h3>Books</h3>
 
-                                        <p>Proactively extend market-driven e-tailers rather than enterprise-wide supply chains.
-                                            Collaboratively embrace 24/7 processes rather than adaptive users. Seamlessly monetize
-                                            alternative e-business.</p>
+                                        <p class="text">I like to read books about mystery, drama, love, conspiracy fiction, thriller, among others.</p>
+                                        <img width="250px" src="img/PhotoGrid_1549502060991.png" alt="books">
                                     </div>
                                     <div class="content-item">
                                         <h3>Sports</h3>
 
-                                        <p>Assertively grow optimal methodologies after viral technologies. Appropriately develop
-                                            frictionless technology for adaptive functionalities. Competently iterate functionalized
-                                            networks for best-of-breed services.</p>
-
-                                    </div>
-                                    <div class="content-item">
-                                        <h3>Art</h3>
-
-                                        <p>Dramatically utilize superior infomediaries whereas functional core competencies.
-                                            Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
-                                            pursue sustainable leadership via.</p>
+                                        <p>I like to play Basketball in my free time. Also, I like to play table tennis</p>       
+                                        <img width="300px" src="img/Basket.gif" alt="Basketball">
                                     </div>
                                 </div>
                             </div>
