--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                             <h1>Hi, I'm Jorleidis Monsalvo!</h1>
 
                             <p class="lead">Undergraduate student</p>
+                            <audio muted controls autoplay preload="metadata" style="width:100%;max-width:300px">
+                                <source src="audio/audio.mp3" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                            </audio>
                             <ul class="social-icon">
                                 <li><a href="https://www.facebook.com/jorly.monsalvotorres"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="https://twitter.com/JorlysM?lang=es"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
