--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">CV</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -51,6 +51,7 @@
             <li><a href="#experience">Work Experience</a></li>
              <li><a href="#education">Education</a></li>
              <li><a href="#hobbies">Hobbies</a></li>
+             <li><a href="#interest">Interest</a></li>
               </ul>
             </li>
           </ul>
@@ -326,7 +327,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="section-title">
-                                        <h2>Interest</h2>
+                                        <h2 id="interest">Interest</h2>
                                         <p>I would like to work in projects related to machine learning, data mining, internet of things.</p>
                                     </div>
                                 </div>
