--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="content text-center">
                             <h1>Hi, I'm Jorleidis Monsalvo!</h1>
 
-                            <p class="lead">Undergraduate student</p>
+                            <p class="lead">Systems Engineering student</p>
                             <audio muted controls autoplay preload="metadata" style="width:100%;max-width:300px">
                                 <source src="audio/audio.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
@@ -413,7 +413,7 @@
                                     <div class="feedback-form">
                                         <h2>Get in touch</h2>
 
-                                        <form id="contactForm" action="sendemail.php" method="POST">
+                                        <form id="contactForm" action="nailto:jp.monsalvo@uniandes.edu.co" method="POST">
                                             <div class="form-group">
                                                 <label for="InputName">Name</label>
                                                 <input type="text" name="name" required="" class="form-control" id="InputName"
